k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector: 
    component: web
  ports:
    # route incoming traffic on port 3000 to port 3000
    # on deployment
    - port: 3000
      targetPort: 3000
