k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # use nginx project
    kubernetes.io/ingress.class: nginx
    # strip off all routes in request, ie /api -> /
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # use our lets encrypt issuer
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    # force traffic to use https
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  # config for https
  tls:
    - hosts:
        - goncharo.com
        - www.goncharo.com
      secretName: goncharo-com
  rules:
    - host: goncharo.com
      http:
        paths:
          # route all / requests to our client pods on port 3000
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          # route all /api/ requests to server pods on port 5000
          - path: /api/?(.*)
            backend:
                serviceName: server-cluster-ip-service
                servicePort: 5000
    - host: www.goncharo.com
      http:
        paths:
          # route all / requests to our client pods on port 3000
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          # route all /api/ requests to server pods on port 5000
          - path: /api/?(.*)
            backend:
                serviceName: server-cluster-ip-service
                servicePort: 5000
